<resources>
    <string name="app_name">Youtube and facebook animation</string>
    <string name="youtube">Youtube</string>
    <string name="home">Home</string>
    <string name="bio">Bio</string>
    <string name="info">Info</string>
    <string name="create_story">Create Story</string>
    <string name="facebook">Facebook</string>
    <string name="custom">Custom</string>
    <string name="a_bunch_of_extra_information">A bunch of extra information</string>
    <string name="nicolas_roard">Nicolas Roard</string>
    <string name="twitter">Twitter</string>
    <string name="tweet">Tweet</string>
    <string name="title_toolbar">DC World</string>
    <string name="joker_title">JOKER</string>
    <string name="joker_desc">Don\'t make us laugh. The green hair. The crazed smile. The maniacal cackle. You know exactly who he is and how far he\'d go to put a smile on your face.  Whether by way of award-winning films like \"The Dark Knight,\" Emmy-winning animated programs like \"Batman: The Animated Series,\" video game appearances such as the record-breaking \"Batman: Arkham Asylum,\" or the countless comics stacking comic book shelves and digital libraries, the Joker stands unquestionably as the most recognizable and popular comic book villain in pop culture history. Unpredictable, violent and incredibly dangerous, he is chaos personified and has taken on everyone from his archenemy Batman to even the Man of Steel.  But Gotham remains his primary home and Batman his biggest adversary, and no hero is perhaps better suited as in many ways, the Joker is the polar opposite of the Dark Knight. Both were created by a great tragedy, but Batman has since vowed to do whatever it takes to prevent similar incidents, the Joker revels in creating chaos and destroying lives, believing that life’s a big joke and psychotically demonstrating that in a moment, it can all change.  Not much is known about his past, but his acts during the present are what define the Joker as one of the greatest threats to our heroes and the people they\'ve sworn to protect. He\'s killed a Robin, crippled Batgirl, and tortured and murdered countless people throughout the DC Universe—all just for a laugh.</string>
    <string name="batman_title">BATMAN</string>
    <string name="batman_desc">"In the name of his murdered parents, Bruce Wayne wages eternal war on the criminals of Gotham City. He is vengeance. He is the night. He is Batman.  One of the most iconic fictional characters in the world, Batman has dedicated his life to an endless crusade, a war on all criminals in the name of his murdered parents, who were taken from him when he was just a child. Since that tragic night, he has trained his body and mind to near physical perfection to be a self-made Super Hero. He's developed an arsenal of technology that would put most armies to shame. And he's assembled teams of his fellow DC Super Heroes, like the Justice League, the Outsiders and Batman, Incorporated.  A playboy billionaire by day, Bruce Wayne’s double life affords him the comfort of a life without financial worry, a loyal butler-turned-guardian and the perfect base of operations in the ancient network of caves beneath his family’s sprawling estate. By night, however, he sheds all pretense, dons his iconic scalloped cape and pointed cowl and takes to the shadowy streets, skies and rooftops of Gotham City.  "</string>
    <string name="superman_title">SUPERMAN</string>
    <string name="superman_desc">Faster than a speeding bullet, more powerful than a locomotive… The Man of Steel fights a never-ending battle for truth, justice, and the American way.  From his blue uniform to his flowing red cape to the \"S\" shield on his chest, Superman is one of the most immediately recognizable and beloved DC Super Heroes of all time. The Man of Steel is the ultimate symbol of truth, justice, and hope. He is the world\'s first Super Hero and a guiding light to all.  The tip of the spear in a revolution that would change the landscape of pop culture, Superman has spent the last eighty years redefining what it means to stand for truth, justice and the American way. The last survivor of the doomed planet Krypton, raised in the quiet heartland of Smallville, Kansas, Superman is as much a legend as he is a man: the gold standard of heroism, compassion and responsibility.  Though his powers make him god-like next to his human compatriots, Superman\'s story is not one of greed or conquest. Instead, he strives to represent the inherent goodness of the human spirit, and the capacity of every living thing to do right by their neighbors.</string>
    <string name="wonderwoman_title">WONDER WOMAN</string>
    <string name="wonderwoman_desc">Beautiful as Aphrodite, wise as Athena, swifter than Hermes, and stronger than Hercules, Princess Diana of Themyscira fights for peace in Man\'s World.  One of the most beloved and iconic DC Super Heroes of all time, Wonder Woman has stood for nearly eighty years as a symbol of truth, justice and equality to people everywhere. Raised on the hidden island of Themyscira, also known as Paradise Island, Diana is an Amazon, like the figures of Greek legend, and her people\'s gift to humanity.  As Themyscira\'s emissary to Man\'s World, Diana has made it her duty to lead by example, even if the differences between her birthplace and new home sometimes present hurdles for her to jump. She has come to represent the possibility and potential of life without war, hate or violence, and she is a beacon of hope to all who find themselves in need. She stands as an equal among the most powerful Super Heroes, with a sense of purpose to protect the world from injustice in all forms.  Diana\'s job, however, is anything but easy. Constantly torn between her mission to promote peace and her need to fight back against the pervasive violence of her new home, Diana struggles to walk a line between her warrior strength and endless compassion each and every day.</string>
    <string name="flash_title">FLASH</string>
    <string name="flash_desc">Three men have held the title of \"The Fastest Man Alive\"—Jay Garrick, Barry Allen and Wally West. Each of them redefined the word \"hero.\"  The mysterious power known as the Speed Force is an energy field that has, over the centuries, granted incredible powers of velocity to certain heroes. The most famous of these is the Flash, also known as the Fastest Man Alive. Ever since the days of World War II, there has been a man clad in red who can run at impossible speeds, using his power to save lives and defend those who cannot defend themselves. All between the ticks of a second.  In the 1940s, college student Jay Garrick acquired his super-speed abilities in a random lab accident and became the first DC Super Hero to go by the name the Flash. Years later, Jay was succeeded by police scientist Barry Allen, until Barry’s former kid partner Wally West took up the mantle at a time when Barry was considered dead. But, when Barry returned, he became the Flash once again. All three generations of speedsters have been cornerstone members of both the Justice Society and Justice League.  The Flash has mastery over not just speed, but time itself, and he has often used his powers to travel though different eras and even into other dimensions. Although the Flash has not always been fast enough to outrun personal tragedy when it has come for him, he always does his best to prevent the same from happening to the people of Central City and Keystone City. In so doing, he\'s earned himself a spot among the greatest Super Heroes the DC Universe has ever known.</string>
    <string name="harleyquinn_title">HARLEY QUINN</string>
    <string name="harleyquinn_desc">The multiverse would be a much less lively place without the hijinks and shenanigans of the former Dr. Harleen Quinzel, the one and only Clown Princess of Crime.  Sometimes love can make people do crazy things. Other times? It drives them completely insane. Such is the case with Harley Quinn, formerly Dr. Harleen Quinzel. A promising psychologist and intern at Arkham Asylum in Gotham City, Harleen was given the chance to get up close and personal with the Joker, an experience that wound up ending…badly. Harleen became obsessed with her subject, and after falling madly in love with the Clown Prince of Crime, she helped him escape the asylum.  Her love for the Joker inspired Harleen to adopt a new identity, that of Harley Quinn, The Joker’s sidekick-slash-love interest—whether he wanted one or not. (Most of the time? He did not.)  In time, Harley came to realize the Joker was holding her back, and she struck out on her own. She became an entrepreneur and a member of several slightly less-than-reputable super teams (including the Suicide Squad), Gotham City’s all-girl gang (the Gotham City Sirens) and a traveling sideshow. Along the way Harley has become one of the most popular super-villains in the DC Universe, thanks in part to her versatility, charisma and cheery-but-deranged outlook on life.  After all, as Harley would say, if you\'re going to go a little crazy, you may as well sit back and enjoy the ride!</string>
    <string name="greenlantern_title">GREEN LANTERN</string>
    <string name="greenlantern_desc">Test pilot Hal Jordan went from being a novelty, the first-ever human Green Lantern, to one of the most legendary Lanterns to ever wield a power ring.  Hal Jordan’s life was changed twice by crashing aircraft. The first time was when he witnessed the death of his father, pilot Martin Jordan. The second was when, as an adult and trained pilot himself, he was summoned to the crashed wreckage of a spaceship belonging to an alien named Abin Sur. Abin explained that he was a member of the Green Lantern Corps, an organization of beings from across the cosmos, armed with power rings fueled by the green energy of all willpower in the universe. Upon his death, Abin entrusted his ring and duties as the Green Lantern of Earth’s space sector to Hal Jordan.  Hal’s life as a Green Lantern has not been easy. He’s had to fight not only enemies, but often friends, colleagues and loved ones. But despite the strain his Green Lantern identity has put on his life, Hal is an honest man who can operate without fear, and is always willing to protect those in need—whether alone, with the Corps or alongside the Justice League and Earth’s other Super Heroes. For Hal has sworn the oath of every Green Lantern—that no evil will escape his sight</string>
    <string name="penguin_title">PENGUIN</string>
    <string name="penguin_desc">Oswald Cobblepot. Not exactly a name designed to shake the pillars of Gotham’s dark criminal underworld. Maybe it’s his other name that strikes fear into the hearts of citizens both good and bad: The Penguin.  This is a villain fueled by a pathological rage that compels him to turn his odd physique, bird-like profile and awkward waddle into a well-dressed force for fear. No one knows more about what the evil forces of Gotham are up to at any given moment than he and he uses that information to blackmail, intimidate and corrupt anyone he can, especially when it’s in the service of bringing down Batman.  They say you shouldn’t judge a book by its cover, but they also say evil is as evil does. A master manipulator, the Penguin is usually surrounded by violent henchmen who do his bidding without question. But when it comes down to a face-to-face, expect him to unleash a deadly barrage from a variety of umbrella weapons and other ingenious devices—often taking the form of fowl. And when all else fails, the Penguin will fight as dirty as they come, hand to hand combat doesn’t ruffle his feathers at all.</string>
    <string name="aquaman_title">AQUAMAN</string>
    <string name="marvel">Marvel</string>
    <string name="cart">Cart</string>
    <string name="music">Music</string>
</resources>