<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/youtube"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/youtube"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintEnd_toStartOf="@id/facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/marvel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/marvel"
            app:layout_constraintBottom_toTopOf="@id/custom"
            app:layout_constraintStart_toStartOf="@id/youtube"
            app:layout_constraintEnd_toStartOf="@id/custom"
            app:layout_constraintTop_toBottomOf="@id/youtube" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cart"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/cart"
            app:layout_constraintBottom_toTopOf="@id/custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/youtube"
            app:layout_constraintTop_toBottomOf="@id/youtube" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/custom"
            app:layout_constraintBottom_toTopOf="@id/twitter"
            app:layout_constraintEnd_toStartOf="@id/facebook"
            app:layout_constraintStart_toEndOf="@id/youtube"
            app:layout_constraintTop_toBottomOf="@id/marvel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/music"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/music"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintStart_toStartOf="@id/youtube"
            app:layout_constraintEnd_toStartOf="@id/custom"
            app:layout_constraintTop_toBottomOf="@id/custom" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/twitter"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/twitter"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintEnd_toEndOf="@id/facebook"
            app:layout_constraintStart_toEndOf="@id/custom"
            app:layout_constraintTop_toBottomOf="@id/custom" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/youtube"
            app:layout_constraintTop_toBottomOf="@id/youtube" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
